<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment"
    android:background="#E4E4E4">

    <TextView
        android:id="@+id/boton2"
        android:layout_width="1dp"
        android:layout_height="1dp"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:layout_margin="30dp"
        android:padding="30dp"
        tools:ignore="MissingConstraints">

        <View android:layout_height="30dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="#FFFFFF">


                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        android:orientation="vertical" />

                    <TextView
                        android:id="@+id/policia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/policia_mun"
                        android:textColor="#000"/>

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imagepoli"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/police" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="100" />

                        <TextView
                            android:id="@+id/numtele1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/numero_policia"
                            android:textColor="#000"/>

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="100" />


                        <ImageView
                            android:id="@+id/imageView10"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/telephone" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="100" />
                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </TableRow>

        <View android:layout_height="30dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="#FFFFFF">


                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        android:orientation="vertical" />

                    <TextView
                        android:id="@+id/bomberos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/bomberos_oax"
                        android:textColor="#000"/>

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgbom"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/firefighter" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="100" />

                        <TextView
                            android:id="@+id/numbom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/numero_bomberos"
                            android:textColor="#000"/>

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="100" />


                        <ImageView
                            android:id="@+id/imgtele"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/telephone" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="100" />
                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </TableRow>

        <View android:layout_height="30dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="#FFFFFF">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        android:orientation="vertical" />

                    <TextView
                        android:id="@+id/emergencias"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/emergencias"
                        android:textColor="#000"/>

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgdoc"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/doctor" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="100" />

                        <TextView
                            android:id="@+id/numemer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/numero_emergencia"
                            android:textColor="#000"/>

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="100" />


                        <ImageView
                            android:id="@+id/imgtele2"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/telephone" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="100" />
                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </TableRow>

        <View android:layout_height="30dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="#FFFFFF">


                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        android:orientation="vertical" />

                    <TextView
                        android:id="@+id/policia_estatal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/policia_estatal"
                        android:textColor="#000"/>

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgpolies"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/policeman" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="100" />

                        <TextView
                            android:id="@+id/numpoles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/numero_poliesta"
                            android:textColor="#000"/>

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="100" />


                        <ImageView
                            android:id="@+id/imgtele3"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/telephone" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="100" />
                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </TableRow>
    </TableLayout>


</FrameLayout>